Version 0.2.0
- All previous commands for Manhunt game settings have been reimplemented as a singular command, and new commands added in the future will be added using the same methods, etc.
  - Accessed in-game using "/ultimate_manhunt {insert your arguments for game settings here...}"
  - New Event: RegisterManhuntSubCommandEvent
    - Registering sub-commands for the main command can be done using RegisterManhuntSubCommandEvent#registerSubCommand
    - Called on the Forge Event-Bus.

- Fixed Wind Torch display settings

- Maximum amount of lives for speed runners has increased (5 -> 99)
  - Max life counts > 5 will display as a counter with the appropriate heart texture to indicate normal/hardcore